tests/endtoend/failure/expected/error_induction_var_in_step.compile.out
error_induction_var_in_step.silly:1:23: error: Undeclared variable i
    1 | FOR (INT32 i: (0, 10, i+1))
      |                       ^
error_induction_var_in_step.silly:3:11: error: Undeclared variable i
    3 |     PRINT i;
      |           ^
